; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_if_iavf.c_iavf_send_vc_msg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_if_iavf.c_iavf_send_vc_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iavf_sc = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Error sending %b: %d\0A\00", align 1
@IAVF_FLAGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iavf_sc*, i32)* @iavf_send_vc_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iavf_send_vc_msg(%struct.iavf_sc* %0, i32 %1) #0 {
  %3 = alloca %struct.iavf_sc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.iavf_sc* %0, %struct.iavf_sc** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load %struct.iavf_sc*, %struct.iavf_sc** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @ixl_vc_send_cmd(%struct.iavf_sc* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load %struct.iavf_sc*, %struct.iavf_sc** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @IAVF_FLAGS, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @iavf_dbg_vc(%struct.iavf_sc* %12, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %11, %2
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @ixl_vc_send_cmd(%struct.iavf_sc*, i32) #1

declare dso_local i32 @iavf_dbg_vc(%struct.iavf_sc*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
